--- a/skills.html
+++ b/skills.html
@@ -208,6 +208,18 @@
 
       </div>
     </div>
+
+    <!-- Key Strengths -->
+    <div data-aos="fade-up" class="mt-12 bg-white p-6 rounded-xl shadow-md border border-gray-200">
+      <h2 class="text-2xl font-semibold mb-4 gradient-text">Key Strengths</h2>
+      <ul class="space-y-3 text-gray-700 list-disc list-inside">
+        <li>Strong problem-solving and troubleshooting skills in complex IT environments</li>
+        <li>Proven ability to automate workflows using Python, Bash, and Ansible</li>
+        <li>Hands-on expertise with cloud platforms and virtualization (AWS, VMware)</li>
+        <li>Deep knowledge of Identity & Access Management (Okta, Azure AD, MFA)</li>
+        <li>Collaborative team player with strong communication skills</li>
+      </ul>
+    </div>
   </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
