--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,8 @@
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
   <style>
     .gradient-text {
-      background: linear-gradient(90deg, #3b82f6, #8b5cf6);
+      /*background: linear-gradient(90deg, #3b82f6, #8b5cf6);*/
+      background: linear-gradient(to right, #3b82f6, #9333ea);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
