--- a/skills.html
+++ b/skills.html
@@ -211,7 +211,7 @@
     </div>
 
    <!-- Key Strengths Section -->
-<section class="pb-20 px-4 sm:px-6 lg:px-8 bg-white">
+<section class="pb-20 px-4 sm:px-6 lg:px-8 bg-white mt-16">
     <div class="max-w-4xl mx-auto">
         <h2 class="text-3xl font-bold mb-12 text-black text-center">Key Strengths</h2>
         
