--- a/skills.html
+++ b/skills.html
@@ -13,7 +13,8 @@
   <style>
     .gradient-text {
       /*background: linear-gradient(90deg, #3b82f6, #8b5cf6);*/
-      background: linear-gradient(to right, #3b82f6, #9333ea);
+      /*background: linear-gradient(to right, #3b82f6, #9333ea);*/
+      background: linear-gradient(to right, #3b82f6, #ec4899);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
