--- a/skills.html
+++ b/skills.html
@@ -147,26 +147,30 @@
             <h2 class="text-xl font-semibold">IAM & Security</h2>
           </div>
           <div class="flex flex-wrap gap-3">
-            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">Okta</span>
-            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">Azure AD</span>
-            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">CyberArk</span>
+            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">Okta IAM</span>
+            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">SSO</span>
             <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">MFA</span>
+            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">RBAC</span>
+            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">SCIM</span>
+            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">SAML</span>
+            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">OAuth</span>
+            <span class="skill-pill bg-purple-100 text-purple-600 px-4 py-2 rounded-full text-sm">AWS IAM</span>
           </div>
         </div>
 
-        <!-- Networking -->
+        <!-- Operating Systems -->
         <div data-aos="fade-up" data-aos-delay="200" class="skill-category bg-white p-6 rounded-xl shadow-md border border-gray-200">
           <div class="flex items-center mb-6">
             <div class="bg-green-100 p-3 rounded-lg mr-4">
-              <i data-feather="wifi" class="skill-icon w-6 h-6 text-green-600"></i>
+              <i data-feather="cpu" class="skill-icon w-6 h-6 text-green-600"></i>
             </div>
-            <h2 class="text-xl font-semibold">Networking</h2>
+            <h2 class="text-xl font-semibold">Operating Systems</h2>
           </div>
           <div class="flex flex-wrap gap-3">
-            <span class="skill-pill bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm">TCP/IP</span>
-            <span class="skill-pill bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm">DNS</span>
-            <span class="skill-pill bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm">VPN</span>
-            <span class="skill-pill bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm">Firewalls</span>
+            <span class="skill-pill bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm">Windows</span>
+            <span class="skill-pill bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm">Linux</span>
+            <span class="skill-pill bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm">Windows Server</span>
+            <span class="skill-pill bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm">Mac OS</span>
           </div>
         </div>
 
@@ -181,24 +185,24 @@
           <div class="flex flex-wrap gap-3">
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">Python</span>
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">Bash</span>
-            <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">PowerShell</span>
-            <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">Ansible</span>
+            <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">PowerShell CLI</span>
+            <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">SQL</span>
           </div>
         </div>
 
-        <!-- Monitoring & Tools -->
+        <!-- Administration -->
         <div data-aos="fade-up" data-aos-delay="300" class="skill-category bg-white p-6 rounded-xl shadow-md border border-gray-200">
           <div class="flex items-center mb-6">
             <div class="bg-red-100 p-3 rounded-lg mr-4">
-              <i data-feather="activity" class="skill-icon w-6 h-6 text-red-600"></i>
+              <i data-feather="settings" class="skill-icon w-6 h-6 text-red-600"></i>
             </div>
             <h2 class="text-xl font-semibold">Monitoring & Tools</h2>
           </div>
           <div class="flex flex-wrap gap-3">
-            <span class="skill-pill bg-red-100 text-red-600 px-4 py-2 rounded-full text-sm">Nagios</span>
-            <span class="skill-pill bg-red-100 text-red-600 px-4 py-2 rounded-full text-sm">Zabbix</span>
-            <span class="skill-pill bg-red-100 text-red-600 px-4 py-2 rounded-full text-sm">Prometheus</span>
-            <span class="skill-pill bg-red-100 text-red-600 px-4 py-2 rounded-full text-sm">Grafana</span>
+            <span class="skill-pill bg-red-100 text-red-600 px-4 py-2 rounded-full text-sm">Google Workspace</span>
+            <span class="skill-pill bg-red-100 text-red-600 px-4 py-2 rounded-full text-sm">Atlassian Suite</span>
+            <span class="skill-pill bg-red-100 text-red-600 px-4 py-2 rounded-full text-sm">Slack</span>
+            <span class="skill-pill bg-red-100 text-red-600 px-4 py-2 rounded-full text-sm">Github</span>
           </div>
         </div>
 
@@ -212,9 +216,9 @@
           </div>
           <div class="flex flex-wrap gap-3">
             <span class="skill-pill bg-pink-100 text-pink-600 px-4 py-2 rounded-full text-sm">MySQL</span>
-            <span class="skill-pill bg-pink-100 text-pink-600 px-4 py-2 rounded-full text-sm">PostgreSQL</span>
+            <span class="skill-pill bg-pink-100 text-pink-600 px-4 py-2 rounded-full text-sm">SQL Server</span>
             <span class="skill-pill bg-pink-100 text-pink-600 px-4 py-2 rounded-full text-sm">MongoDB</span>
-            <span class="skill-pill bg-pink-100 text-pink-600 px-4 py-2 rounded-full text-sm">Redis</span>
+            <span class="skill-pill bg-pink-100 text-pink-600 px-4 py-2 rounded-full text-sm">Oracle</span>
           </div>
         </div>
 
