--- a/skills.html
+++ b/skills.html
@@ -197,7 +197,7 @@
             <div class="bg-red-100 p-3 rounded-lg mr-4">
               <i data-feather="settings" class="skill-icon w-6 h-6 text-red-600"></i>
             </div>
-            <h2 class="text-xl font-semibold">Monitoring & Tools</h2>
+            <h2 class="text-xl font-semibold">Administration</h2>
           </div>
           <div class="flex flex-wrap gap-3">
             <span class="skill-pill bg-red-100 text-red-600 px-4 py-2 rounded-full text-sm">Google Workspace</span>
