--- a/skills.html
+++ b/skills.html
@@ -184,7 +184,7 @@
           </div>
           <div class="flex flex-wrap gap-3">
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">Python</span>
-            <span class="skill-pill bg-yellow-100 bg-opacity-30 text-yellow-400 px-4 py-2 rounded-full text-sm">CLI</span>
+            <span class="skill-pill bg-yellow-200 bg-opacity-30 text-yellow-400 px-4 py-2 rounded-full text-sm font-bold">CLI</span>
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">Bash</span>
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">PowerShell CLI</span>
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">SQL</span>
