--- a/skills.html
+++ b/skills.html
@@ -109,7 +109,7 @@
     <div class="max-w-7xl mx-auto">
       <div class="text-center">
         <h1 class="text-3xl md:text-5xl font-bold mb-4 gradient-text">Technical Skills</h1>
-        <p class="text-xl text-gray-600 max-w-3xl mx-auto">
+        <p class="text-xl text-gray-600 max-w-3xl mx-auto mt-10">
           My comprehensive technical toolkit that powers innovative IT solutions and security frameworks.
         </p>
       </div>
@@ -184,7 +184,6 @@
           </div>
           <div class="flex flex-wrap gap-3">
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">Python</span>
-            <span class="skill-pill bg-yellow-200 bg-opacity-30 text-yellow-400 px-4 py-2 rounded-full text-sm font-bold">CLI</span>
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">Bash</span>
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">PowerShell CLI</span>
             <span class="skill-pill bg-yellow-100 text-yellow-600 px-4 py-2 rounded-full text-sm">SQL</span>
