--- a/skills.html
+++ b/skills.html
@@ -231,7 +231,7 @@
    <!-- Key Strengths Section -->
 <section class="pb-20 px-4 sm:px-6 lg:px-8 bg-white mt-16">
     <div class="max-w-4xl mx-auto">
-        <h2 class="text-3xl font-bold mb-12 text-blue text-center">Key Strengths</h2>
+        <h2 class="text-3xl font-bold mb-12 text-blue-500 text-center">Key Strengths</h2>
         
         <div class="grid md:grid-cols-2 gap-8">
             <div data-aos="fade-right" class="bg-white p-6 rounded-xl border border-gray-200 shadow-lg">
