--- a/skills.html
+++ b/skills.html
@@ -19,11 +19,11 @@
       background-clip: text;
       color: transparent;
     }
-    .gradient-text2 {
+    /*.gradient-text2 {
       background: linear-gradient(90deg, #3b82f6, #8b5cf6);
-      background-clip: text; /* for non-webkit browsers */
-      color: transparent;     /* fallback */
-    }
+      background-clip: text; 
+      color: transparent;     
+    }*/
     .nav-link {
       position: relative;
     }
@@ -113,7 +113,7 @@
   <section id="hero" class="pt-32 pb-20 px-4 sm:px-6 lg:px-8">
     <div class="max-w-7xl mx-auto">
       <div class="text-center">
-        <h1 class="text-3xl md:text-5xl font-bold mb-4 gradient-text2">Technical Skills</h1>
+        <h1 class="text-3xl md:text-5xl font-bold mb-4 gradient-text">Technical Skills</h1>
         <p class="text-xl text-gray-600 max-w-3xl mx-auto mt-10">
           My comprehensive technical toolkit that powers innovative IT solutions and security frameworks.
         </p>
