--- a/skills.html
+++ b/skills.html
@@ -279,9 +279,16 @@
     </div>
 </section>
 
-
-
+    <!--footer-->
+  <footer>
+  <div class="mt-12 pt-8 border-t border-gray-200 text-center">
+                <p class="text-gray-500 text-sm">&copy; 2024 John Muir. All rights reserved.</p>
+            </div>
+        </div>
+  </footer>
+    
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
   <script>
     VANTA.GLOBE({
       el: "#vanta-bg",
