--- a/skills.html
+++ b/skills.html
@@ -71,7 +71,7 @@
   </style>
 </head>
 <body class="bg-white text-gray-900 font-sans">
-  <div id="vanta-bg" class="fixed inset-0 -z-10 opacity-10"></div>
+  <div id="vanta-bg" class="fixed inset-0 -z-20"></div>
 
   <!-- Navigation -->
   <nav class="fixed w-full bg-white bg-opacity-90 backdrop-blur-sm z-50 border-b border-gray-200">
