--- a/skills.html
+++ b/skills.html
@@ -304,7 +304,7 @@
             size: 0.8
         });
 
-        document.getElementById('mobile-menu-button').addEventListener('click', function() {
+        document.getElementById('menu-btn').addEventListener('click', function() {
             const menu = document.getElementById('mobile-menu');
             menu.classList.toggle('hidden');
         });
