--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-gray-800 hover:text-blue-600 font-medium">Home</a>
-                    <a href="about.html" class="text-gray-800 hover:text-blue-600 font-medium">About</a>
+                    <a href="skills.html" class="text-gray-800 hover:text-blue-600 font-medium">Skills</a>
                     <a href="experience.html" class="text-gray-800 hover:text-blue-600 font-medium">Experience</a>
                     <a href="contact.html" class="text-gray-800 hover:text-blue-600 font-medium text-blue-600">Contact</a>
                 </div>
@@ -34,7 +34,7 @@
         <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="index.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-800 hover:text-blue-600">Home</a>
-                <a href="about.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-800 hover:text-blue-600">About</a>
+                <a href="skills.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-800 hover:text-blue-600">Skills</a>
                 <a href="experience.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-800 hover:text-blue-600">Experience</a>
                 <a href="contact.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-800 hover:text-blue-600 text-blue-600">Contact</a>
             </div>
