--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
             </div>
         </div>
     </section>
-    <!-- 
+    
     <!-- Map Section -->
     <section class="py-16 bg-gray-50">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -123,6 +123,9 @@
                 <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Located in the Bay Area</h2>
                 <div class="aspect-w-16 aspect-h-9 bg-gray-200 rounded-lg overflow-hidden">
                     <!-- Map placeholder - in a real implementation you would embed a Google Map -->
+                    <iframe>
+                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3155.016053045856!2d-122.2727471846837!3d37.871522979744955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857c246dc3f3f5%3A0xa14b8b60f81ce6af!2sBay%20Area%2C%20CA!5e0!3m2!1sen!2sus!4v1694542000000!5m2!1sen!2sus"
+                    </iframe>
                     <div class="w-full h-64 md:h-96 flex items-center justify-center bg-gray-100">
                         <div class="text-center">
                             <i data-feather="map" class="w-16 h-16 text-gray-400 mx-auto mb-4"></i>
@@ -133,24 +136,27 @@
             </div>
         </div>
     </section>
-    -->
-    <!-- Map Section -->
-    <section class="py-16 bg-gray-50">
-      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="bg-white p-8 rounded-lg shadow-sm">
-          <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Located in the Bay Area</h2>
-          <div class="aspect-w-16 aspect-h-9 bg-gray-200 rounded-lg overflow-hidden">
-            <!-- Replace placeholder with Google Maps iframe -->
-            <iframe 
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3155.016053045856!2d-122.2727471846837!3d37.871522979744955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857c246dc3f3f5%3A0xa14b8b60f81ce6af!2sBay%20Area%2C%20CA!5e0!3m2!1sen!2sus!4v1694542000000!5m2!1sen!2sus"
-              width="100%" height="350" style="border:0;" 
-              allowfullscreen="" loading="lazy" 
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-          </div>
-        </div>
+  
+<section class="py-16 bg-gray-50">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="bg-white p-8 rounded-lg shadow-sm">
+      <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Located in the Bay Area</h2>
+      <div class="aspect-w-16 aspect-h-9 bg-gray-200 rounded-lg overflow-hidden">
+        <!-- Embed Google Map -->
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3155.016053045856!2d-122.2727471846837!3d37.871522979744955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857c246dc3f3f5%3A0xa14b8b60f81ce6af!2sBay%20Area%2C%20CA!5e0!3m2!1sen!2sus!4v1694542000000!5m2!1sen!2sus" 
+          width="100%" 
+          height="450" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
 
     <!-- Footer -->
     <footer class="bg-white border-t border-gray-200 py-8">
