--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Muir | IT Engineer Portfolio</title>
+    <title>Harshal More | IT Engineer Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -66,8 +66,8 @@
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
         <section class="grid md:grid-cols-2 gap-12 items-center">
             <div data-aos="fade-right">
-                <h1 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="gradient-text">John Muir</span></h1>
-                <h2 class="text-2xl md:text-3xl font-semibold mb-6 text-gray-700">IT Engineer & Cloud Security Specialist</h2>
+                <h1 class="text-4xl md:text-5xl font-bold mb-4">Hi, I'm <span class="gradient-text">Harshal More</span></h1>
+                <h2 class="text-2xl md:text-3xl font-semibold mb-6 text-gray-700">IT Engineer & IAM Specialist</h2>
                 <p class="text-gray-600 mb-8 text-lg leading-relaxed">
                     Results-driven IT Engineer with nearly 5 years of experience in identity and access management (IAM), 
                     cloud security and automation. Expertise in designing and managing Okta IAM frameworks, optimizing IT infrastructure, 
@@ -85,7 +85,7 @@
             <div data-aos="fade-left" class="flex justify-center">
                 <div class="relative w-64 h-64 md:w-80 md:h-80">
                     <div class="absolute inset-0 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 blur-xl opacity-20"></div>
-                    <img src="http://static.photos/technology/640x360/42" alt="John Muir" class="relative rounded-full w-full h-full object-cover border-4 border-white shadow-xl">
+                    <img src="http://static.photos/technology/640x360/42" alt="Harshal More" class="relative rounded-full w-full h-full object-cover border-4 border-white shadow-xl">
                 </div>
             </div>
         </section>
@@ -156,8 +156,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-lg font-semibold gradient-text">John Muir</h3>
-                    <p class="mt-2 text-gray-600">IT Engineer & Cloud Security Specialist</p>
+                    <h3 class="text-lg font-semibold gradient-text">Harshal More</h3>
+                    <p class="mt-2 text-gray-600">IT Engineer & IAM Specialist</p>
                 </div>
                 <div>
                     <h4 class="text-sm font-semibold text-gray-900 uppercase tracking-wider">Navigation</h4>
@@ -187,12 +187,12 @@
                             <i data-feather="github"></i>
                         </a>
                     </div>
-                    <p class="mt-4 text-gray-600">abc@pqr.com</p>
+                    <p class="mt-4 text-gray-600">allmyfavsubs@outlook.com</p>
                     <p class="mt-1 text-gray-600">Bay Area, CA</p>
                 </div>
             </div>
             <div class="mt-12 pt-8 border-t border-gray-200 text-center">
-                <p class="text-gray-500 text-sm">&copy; 2024 John Muir. All rights reserved.</p>
+                <p class="text-gray-500 text-sm">&copy; 2024 Harshal More. All rights reserved.</p>
             </div>
         </div>
     </footer>
