--- a/education.html
+++ b/education.html
@@ -10,6 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <style>
+        html {
+            font-size: 125%; /* makes the site look like 125% zoom */
+          }
         .gradient-text {
             background: linear-gradient(90deg, #3b82f6, #8b5cf6, #ec4899);
             -webkit-background-clip: text;
