--- a/skills.html
+++ b/skills.html
@@ -11,6 +11,9 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
   <style>
+    html {
+            font-size: 125%; /* makes the site look like 125% zoom */
+          }
     .gradient-text {
       /*background: linear-gradient(90deg, #3b82f6, #8b5cf6);*/
       /*background: linear-gradient(to right, #3b82f6, #9333ea);*/
