--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div data-aos="fade-left" class="flex justify-center">
                 <div class="relative w-64 h-64 md:w-80 md:h-80">
                     <div class="absolute inset-0 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 blur-xl opacity-20"></div>
-                    <img src="http://static.photos/technology/640x360/42" alt="Harshal More" class="relative rounded-full w-full h-full object-cover border-4 border-white shadow-xl">
+                    <img src="https://drive.google.com/file/d/1dDWmGjhRUk8WNVibeZri5C25XcWgz1UK/view?usp=sharing" alt="Harshal More" class="relative rounded-full w-full h-full object-cover border-4 border-white shadow-xl">
                 </div>
             </div>
         </section>
