--- a/experience.html
+++ b/experience.html
@@ -150,6 +150,16 @@
                                     <p class="text-gray-700">Integrated Okta with SaaS applications and cloud platforms for centralized authentication, authorization and security management, reducing access provisioning time by 50% and improving user satisfaction.</p>
                                 </div>
                             </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Leveraged AI-driven features in Freshdesk, such as automated ticket categorization and smart response suggestions, to streamline issue resolution and improve support efficiency.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
