--- a/experience.html
+++ b/experience.html
@@ -160,6 +160,56 @@
                                     <p class="text-gray-700">Leveraged AI-driven features in Freshdesk, such as automated ticket categorization and smart response suggestions, to streamline issue resolution and improve support efficiency.</p>
                                 </div>
                             </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Provided technical support and troubleshooting assistance to resolve issues related to Okta, authentication failures and access management challenges.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Built a Slack bot that used the chat.postMessage API with bot token authentication to post test messages to designated channels in a sandbox environment.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Managed technical support for all-hands meetings, ensuring seamless A/V setup, video conferencing, and configuring Cisco Webex Room Navigators and Touch 10 panels, minimizing disruptions for executives and attendees.</p>
+                                </div>
+                            </div>  
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Led software license management and vendor negotiation, securing cost savings, optimal pricing and preventing compliance risks</p>
+                                </div>
+                            </div>  
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Developed and documented IAM best practices, training IT staff and end-users on secure authentication processes.</p>
+                                </div>
+                            </div>  
                         </div>
                     </div>
                 </div>
