added more exp RL

--- a/experience.html
+++ b/experience.html
@@ -197,7 +197,7 @@
                                     </div>
                                 </div>
                                 <div class="ml-4">
-                                    <p class="text-gray-700">Led software license management and vendor negotiation, securing cost savings, optimal pricing and preventing compliance risks</p>
+                                    <p class="text-gray-700">Led software license management and vendor negotiation, securing cost savings, optimal pricing and preventing compliance risks.</p>
                                 </div>
                             </div>  
                             <div class="flex">
@@ -264,6 +264,46 @@
                                 </div>
                                 <div class="ml-4">
                                     <p class="text-gray-700">Developed complex identity mapping and transformation rules in RadiantOne to accommodate custom data models, enhancing interoperability with legacy systems.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Implemented advanced join-and-correlate logic within RadiantOne, ensuring accurate and consolidated identity views for access management and compliance reporting.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Provided 24x7 technical support, ensuring SLA compliance and reducing ticket resolution time by 35% through proactive troubleshooting and root cause analysis.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Enhanced security by implementing role-based access control (RBAC), encryption protocols and authentication mechanisms, ensuring regulatory compliance.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Collaborated with development teams to test product functionality, creating bug reports and performance improvements.</p>
                                 </div>
                             </div>
                         </div>
