--- a/experience.html
+++ b/experience.html
@@ -404,7 +404,7 @@
                             <i data-feather="github"></i>
                         </a>
                     </div>
-                    <p class="mt-4 text-gray-600">abc@pqr.com</p>
+                    <p class="mt-4 text-gray-600">allmyfavsubs@outlook.com</p>
                     <p class="mt-1 text-gray-600">Bay Area, CA</p>
                 </div>
             </div>
