--- a/experience.html
+++ b/experience.html
@@ -373,7 +373,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-lg font-semibold gradient-text">John Muir</h3>
+                    <h3 class="text-lg font-semibold gradient-text">Harshal More</h3>
                     <p class="mt-2 text-gray-600">IT Engineer & Cloud Security Specialist</p>
                 </div>
                 <div>
