--- a/experience.html
+++ b/experience.html
@@ -374,7 +374,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-lg font-semibold gradient-text">Harshal More</h3>
-                    <p class="mt-2 text-gray-600">IT Engineer & Cloud Security Specialist</p>
+                    <p class="mt-2 text-gray-600">IT Engineer & IAM Specialist</p>
                 </div>
                 <div>
                     <h4 class="text-sm font-semibold text-gray-900 uppercase tracking-wider">Navigation</h4>
