--- a/skills.html
+++ b/skills.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <style>
     html {
             font-size: 110%; /* makes the site look like 125% zoom */
