--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!--<link rel="icon" href="images/favicon.ico" type="image/x-icon">-->
+    <link rel="icon" href="images/favicon.png" type="image/png">
+
 </head>
 <body class="bg-white">
     <!-- Navigation -->
