--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,8 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!--<link rel="icon" href="images/favicon.ico" type="image/x-icon">-->
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <style>
         html {
             font-size: 110%; /* makes the site look like 125% zoom */
