--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Muir | Experience</title>
+    <title>Harshal More | Experience</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -51,7 +51,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <a href="index.html" class="text-xl font-bold gradient-text">JM</a>
+                    <a href="index.html" class="text-xl font-bold gradient-text">HM</a>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-gray-900 hover:text-blue-600 px-3 py-2 text-sm font-medium">Home</a>
@@ -98,7 +98,8 @@
                                 <p class="text-lg text-gray-600">Cisco Systems, Inc.</p>
                             </div>
                             <div class="mt-4 md:mt-0">
-                                <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">July 2022 – 2024</span>
+                                <span class="bg-purple-900 bg-opacity-50 text-purple-400 px-3 py-1 rounded-full text-sm font-medium">Cisco</span>
+                                <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">July 2022 – April 2024</span>
                             </div>
                         </div>
                         <div class="space-y-4">
@@ -361,6 +362,46 @@
                                     </div>
                                 </div>
                                 <div class="ml-4">
+                                    <p class="text-gray-700">Implemented ServiceNow automation to reduce manual tasks, improve incident resolution time, and address recurring issues, cutting ticket volume by 15%.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Optimized ServiceNow workflows to improve efficiency and reduce service desk response times by automating repetitive tasks and approvals.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Created and optimized knowledge articles, reducing ticket resolution times by 20%.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
+                                    <p class="text-gray-700">Provided ServiceNow platform training to new team members, accelerating onboarding and adoption.</p>
+                                </div>
+                            </div>
+                            <div class="flex">
+                                <div class="flex-shrink-0 mt-1">
+                                    <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
+                                        <div class="w-2 h-2 rounded-full bg-white"></div>
+                                    </div>
+                                </div>
+                                <div class="ml-4">
                                     <p class="text-gray-700">Worked on IT projects for enterprise clients, including Disney, Lafarge and CIRCOR.</p>
                                 </div>
                             </div>
@@ -411,7 +452,7 @@
                 </div>
             </div>
             <div class="mt-12 pt-8 border-t border-gray-200 text-center">
-                <p class="text-gray-500 text-sm">&copy; 2024 John Muir. All rights reserved.</p>
+                <p class="text-gray-500 text-sm">&copy; 2024 Harshal More. All rights reserved.</p>
             </div>
         </div>
     </footer>
