--- a/experience.html
+++ b/experience.html
@@ -98,8 +98,8 @@
                                 <p class="text-lg text-gray-600">Cisco Systems, Inc.</p>
                             </div>
                             <div class="mt-4 md:mt-0">
-                                <span class="bg-purple-900 bg-opacity-50 text-purple-400 px-3 py-1 rounded-full text-sm font-medium">Cisco</span>
-                                <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">July 2022 – April 2024</span>
+                                <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Cisco Systems, Inc.</span>
+                                <span class="text-gray-700">July 2022 – April 2024</span>
                             </div>
                         </div>
                         <div class="space-y-4">
