--- a/experience.html
+++ b/experience.html
@@ -95,7 +95,7 @@
                         <div class="flex flex-col md:flex-row md:justify-between md:items-start mb-6">
                             <div>
                                 <h3 class="text-2xl font-bold">IT Engineer</h3>
-                                <p class="text-lg text-gray-600">Cisco Systems, Inc.</p>
+                                <!--<p class="text-lg text-gray-600">Cisco Systems, Inc.</p>-->
                             </div>
                             <div class="mt-4 md:mt-0">
                                 <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Cisco Systems, Inc.</span>
@@ -222,10 +222,11 @@
                         <div class="flex flex-col md:flex-row md:justify-between md:items-start mb-6">
                             <div>
                                 <h3 class="text-2xl font-bold">Systems Engineer</h3>
-                                <p class="text-lg text-gray-600">Radiant Logic</p>
+                                <!--<p class="text-lg text-gray-600">Radiant Logic</p>-->
                             </div>
                             <div class="mt-4 md:mt-0">
-                                <span class="inline-block px-3 py-1 rounded-full bg-purple-100 text-purple-800">Dec 2019 – July 2022</span>
+                                <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Radiant Logic</span>
+                                <span class="text-gray-700">Dec 2019 – July 2022</span>
                             </div>
                         </div>
                         <div class="space-y-4">
@@ -317,11 +318,12 @@
                     <div class="bg-white p-8 rounded-xl shadow-md hover-grow">
                         <div class="flex flex-col md:flex-row md:justify-between md:items-start mb-6">
                             <div>
-                                <h3 class="text-2xl font-bold">Systems Engineer</h3>
-                                <p class="text-lg text-gray-600">Larsen and Toubro Infotech (LTI)</p>
+                                <h3 class="text-2xl font-bold">Graduate Engineer Trainee</h3>
+                                <!--<p class="text-lg text-gray-600">Larsen and Toubro Infotech (LTI)</p>-->
                             </div>
                             <div class="mt-4 md:mt-0">
-                                <span class="inline-block px-3 py-1 rounded-full bg-pink-100 text-pink-800">Dec 2014 – July 2017</span>
+                                <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Larsen and Toubro Infotech (LTI)</span>
+                                <span class="text-gray-700">Dec 2014 – July 2017</span>
                             </div>
                         </div>
                         <div class="space-y-4">
