--- a/experience.html
+++ b/experience.html
@@ -225,7 +225,7 @@
                                 <!--<p class="text-lg text-gray-600">Radiant Logic</p>-->
                             </div>
                             <div class="mt-4 md:mt-0">
-                                <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Radiant Logic</span>
+                                <span class="inline-block px-3 py-1 rounded-full bg-pink-100 text-pink-800">Radiant Logic</span>
                                 <span class="text-gray-700">Dec 2019 – July 2022</span>
                             </div>
                         </div>
@@ -322,7 +322,7 @@
                                 <!--<p class="text-lg text-gray-600">Larsen and Toubro Infotech (LTI)</p>-->
                             </div>
                             <div class="mt-4 md:mt-0">
-                                <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Larsen and Toubro Infotech (LTI)</span>
+                                <span class="inline-block px-3 py-1 rounded-full bg-purple-100 text-purple-800">Larsen and Toubro Infotech (LTI)</span>
                                 <span class="text-gray-700">Dec 2014 – July 2017</span>
                             </div>
                         </div>
