--- a/experience.html
+++ b/experience.html
@@ -99,7 +99,7 @@
                             </div>
                             <div class="mt-4 md:mt-0">
                                 <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Cisco Systems, Inc.</span>
-                                <span class="text-gray-700">July 2022 – April 2024</span>
+                                <span class="ml-3 text-gray-700">July 2022 – April 2024</span>
                             </div>
                         </div>
                         <div class="space-y-4">
@@ -226,7 +226,7 @@
                             </div>
                             <div class="mt-4 md:mt-0">
                                 <span class="inline-block px-3 py-1 rounded-full bg-pink-100 text-pink-800">Radiant Logic</span>
-                                <span class="text-gray-700">Dec 2019 – July 2022</span>
+                                <span class="ml-3 text-gray-700">Dec 2019 – July 2022</span>
                             </div>
                         </div>
                         <div class="space-y-4">
@@ -323,7 +323,7 @@
                             </div>
                             <div class="mt-4 md:mt-0">
                                 <span class="inline-block px-3 py-1 rounded-full bg-purple-100 text-purple-800">Larsen and Toubro Infotech (LTI)</span>
-                                <span class="text-gray-700">Dec 2014 – July 2017</span>
+                                <span class="ml-3 text-gray-700">Dec 2014 – July 2017</span>
                             </div>
                         </div>
                         <div class="space-y-4">
