--- a/experience.html
+++ b/experience.html
@@ -99,7 +99,10 @@
                             </div>
                             <div class="mt-4 md:mt-0">
                                 <!--<span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Cisco Systems, Inc.</span>-->
-                                <span class="inline-block px-3 py-1 rounded-full bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 text-transparent bg-clip-text font-extrabold">Cisco</span>
+                                <span class="inline-block px-3 py-1 rounded-full bg-purple-600 text-white font-semibold relative overflow-hidden">
+                                <span class="relative z-10">Larsen and Toubro Infotech (LTI)</span>
+                                <span class="absolute inset-0 bg-gradient-to-t from-white/30 to-transparent"></span>
+                                </span>
                                 <span class="ml-3 text-gray-700">July 2022 – April 2024</span>
                             </div>
                         </div>
