restore original company name

--- a/experience.html
+++ b/experience.html
@@ -105,11 +105,11 @@
                                 <!--<p class="text-lg text-gray-600">Cisco Systems, Inc.</p>-->
                             </div>
                             <div class="mt-4 md:mt-0">
-                                <!--<span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Cisco Systems, Inc.</span>-->
-                                <span class="inline-block px-3 py-1 rounded-full bg-purple-600 text-white font-bold relative overflow-hidden">
+                                <span class="inline-block px-3 py-1 rounded-full bg-blue-100 text-blue-800">Cisco Systems, Inc.</span>
+                                <!--<span class="inline-block px-3 py-1 rounded-full bg-purple-600 text-white font-bold relative overflow-hidden">
                                 <span class="relative z-10">Cisco</span>
                                 <span class="absolute top-0 left-[-150%] w-[200%] h-full bg-gradient-to-r from-transparent via-white/40 to-transparent animate-[shimmer_2s_infinite]"></span>
-                                </span>
+                                </span>-->
                                 <span class="ml-3 text-gray-700">July 2022 – April 2024</span>
                             </div>
                         </div>
