--- a/experience.html
+++ b/experience.html
@@ -333,7 +333,7 @@
                                 <!--<p class="text-lg text-gray-600">Larsen and Toubro Infotech (LTI)</p>-->
                             </div>
                             <div class="mt-4 md:mt-0">
-                                <span class="inline-block px-3 py-1 rounded-full bg-purple-100 text-purple-800">Larsen and Toubro Infotech (LTI)</span>
+                                <span class="inline-block px-3 py-1 rounded-full bg-purple-100 text-purple-800">Larsen and Toubro Infotech</span>
                                 <span class="ml-3 text-gray-700">Dec 2014 – July 2017</span>
                             </div>
                         </div>
