--- a/experience.html
+++ b/experience.html
@@ -450,14 +450,14 @@
                 <div>
                     <h4 class="text-sm font-semibold text-gray-900 uppercase tracking-wider">Connect</h4>
                     <div class="mt-4 flex space-x-4">
-                        <a href="#" class="text-gray-600 hover:text-blue-600">
+                        <a href="https://www.linkedin.com/in/harshal-more-08a89795/" class="text-gray-600 hover:text-blue-600">
                             <i data-feather="linkedin"></i>
                         </a>
-                        <a href="#" class="text-gray-600 hover:text-blue-600">
+                        <a href="mailto:allmyfavsubs@outlook.com" class="text-gray-600 hover:text-blue-600">
                             <i data-feather="mail"></i>
                         </a>
-                        <a href="#" class="text-gray-600 hover:text-blue-600">
-                            <i data-feather="github"></i>
+                        <a href="https://hm.itfolio.org/" class="text-gray-600 hover:text-blue-600">
+                            <i data-feather="globe"></i>
                         </a>
                     </div>
                     <p class="mt-4 text-gray-600">allmyfavsubs@outlook.com</p>
