--- a/experience.html
+++ b/experience.html
@@ -427,11 +427,12 @@
 
      <!-- Download Button -->
         <div class="text-center mt-16" data-aos="fade-up">
-            <a href="#" class="inline-flex items-center px-6 py-3 bg-primary text-white rounded-lg font-medium hover:bg-blue-700 transition duration-300 shadow-lg hover:shadow-xl">
+            <a href="resume.pdf" download target="_blank"
+                class="inline-flex items-center px-6 py-3 bg-blue-600 text-white rounded-lg font-medium hover:bg-blue-700 transition duration-300 shadow-lg hover:shadow-xl">
                 <i data-feather="download" class="mr-2"></i> Download Full Resume
             </a>
         </div>
-        
+
     <footer class="bg-gray-50 mt-24">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
