--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | John Muir</title>
+    <title>Contact | Harshal More</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -18,7 +18,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <a href="index.html" class="text-xl font-bold text-gray-800">John Muir</a>
+                    <a href="index.html" class="text-xl font-bold text-gray-800">Harshal Morer</a>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-gray-800 hover:text-blue-600 font-medium">Home</a>
@@ -49,7 +49,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row">
                 <div class="md:w-1/2 mb-10 md:mb-0 md:pr-10" data-aos="fade-right">
-                    <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-6">Get In Touch</h1>
+                    <h2 class="text-3xl font-bold mb-12 text-blue-500 text-center">Get In Touch</h1>
                     <p class="text-gray-600 mb-8">I'm currently open to new opportunities and collaborations in the field of IT Engineering and Cloud Security. Feel free to reach out!</p>
                     
                     <div class="space-y-6">
@@ -59,7 +59,7 @@
                             </div>
                             <div>
                                 <h3 class="font-bold text-gray-800 mb-1">Email</h3>
-                                <a href="mailto:abc@xyz.com" class="text-gray-600 hover:text-blue-600">abc@xyz.com</a>
+                                <a href="mailto:allmyfavsubs@outlook.com" class="text-gray-600 hover:text-blue-600">allmyfavsubs@outlook.com</a>
                             </div>
                         </div>
                         <div class="flex items-start">
@@ -81,12 +81,17 @@
                             </div>
                         </div>
                         <div class="flex items-start">
+                            <!--<div class="bg-blue-100 p-3 rounded-lg mr-4">
+                                  <a href="https://www.linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer">
+                                  <i data-feather="linkedin" class="text-blue-600"></i>
+                                  </a>
+                            </div>-->
                             <div class="bg-blue-100 p-3 rounded-lg mr-4">
                                 <i data-feather="linkedin" class="text-blue-600"></i>
                             </div>
                             <div>
                                 <h3 class="font-bold text-gray-800 mb-1">LinkedIn</h3>
-                                <a href="#" class="text-gray-600 hover:text-blue-600">linkedin.com/in/johnmuir</a>
+                                <a href="#" class="text-gray-600 hover:text-blue-600">https://www.linkedin.com/in/harshal-more-08a89795/</a>
                             </div>
                         </div>
                     </div>
@@ -147,7 +152,7 @@
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0">
-                    <p class="text-gray-600">&copy; 2024 John Muir. All rights reserved.</p>
+                    <p class="text-gray-600">&copy; 2024 Harshal More. All rights reserved.</p>
                 </div>
                 <div class="flex space-x-6">
                     <a href="#" class="text-gray-600 hover:text-blue-600">
