--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="flex flex-col md:flex-row md:justify-between md:items-center">
                         <div>
                             <h3 class="text-xl font-semibold">IT Engineer</h3>
-                            <p class="text-gray-600">Cisco Systems, Inc. | July 2022 – 2024</p>
+                            <p class="text-gray-600">Cisco Systems, Inc. | July 2022 – April 2024</p>
                         </div>
                         <a href="experience.html" class="mt-4 md:mt-0 text-blue-600 hover:text-blue-800 flex items-center">
                             View details <i data-feather="arrow-right" class="ml-2 w-4 h-4"></i>
