--- a/education.html
+++ b/education.html
@@ -152,7 +152,7 @@
                             <p class="text-gray-700"><span class="font-semibold">GPA:</span> 3.62</p>
                         </div>
                     </div>
-                    <div class="flex">
+                    <!--<div class="flex">
                         <div class="flex-shrink-0 mt-1">
                             <div class="w-5 h-5 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center">
                                 <div class="w-2 h-2 rounded-full bg-white"></div>
@@ -161,7 +161,7 @@
                         <div class="ml-4">
                             <p class="text-gray-700"><span class="font-semibold">Focus:</span> Software Engineering, Networking</p>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -261,7 +261,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-lg font-semibold gradient-text">John Muir</h3>
-                    <p class="mt-2 text-gray-600">IT Engineer & Cloud Security Specialist</p>
+                    <p class="mt-2 text-gray-600">IT Engineer & IAM Specialist</p>
                 </div>
                 <div>
                     <h4 class="text-sm font-semibold text-gray-900 uppercase tracking-wider">Navigation</h4>
@@ -291,7 +291,7 @@
                             <i data-feather="github"></i>
                         </a>
                     </div>
-                    <p class="mt-4 text-gray-600">abc@pqr.com</p>
+                    <p class="mt-4 text-gray-600">allmyfavsubs@outlook.com</p>
                     <p class="mt-1 text-gray-600">Bay Area, CA</p>
                 </div>
             </div>
