--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>John Muir | Skills</title>
+  <title>Harshal More | Skills</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -83,7 +83,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <div class="flex items-center">
-          <a href="index.html" class="text-2xl font-bold gradient-text">JM</a>
+          <a href="index.html" class="text-2xl font-bold gradient-text">HM</a>
         </div>
         <div class="hidden md:block">
           <div class="ml-10 flex items-baseline space-x-8">
@@ -287,7 +287,7 @@
     <!--footer-->
   <footer>
   <div class="mt-12 pt-8 border-t border-gray-200 text-center">
-                <p class="text-gray-500 text-sm">&copy; 2024 John Muir. All rights reserved.</p>
+                <p class="text-gray-500 text-sm">&copy; 2024 Harshal More. All rights reserved.</p>
             </div>
         </div>
   </footer>
