--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                     <div class="bg-gray-50 p-8 rounded-lg shadow-sm">
                         <h2 class="text-2xl font-bold text-gray-800 mb-6">Send Me a Message</h2>
                         
-                        <form action="https://formspree.io/f/xpwyzedw" method="POST">
+                        <form action="https://formspree.io/f/xpwyzedw" method="POST" accept-charset="UTF-8">
                            <div class="mb-4">
                                 <label for="name" class="block text-gray-700 font-medium mb-2">Name</label>
                                 <input type="text" name="name" id="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500">
