--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </style>
 </head>
 <body class="bg-white font-sans">
+    <canvas id="splash"></canvas>
     <div id="vanta-bg" class="fixed inset-0 -z-10 opacity-10"></div>
     
     <nav class="bg-white shadow-sm sticky top-0 z-50">
@@ -232,5 +233,6 @@
 
         feather.replace();
     </script>
+    <script src="test.js"></script>
 </body>
 </html>
