--- a/index.html
+++ b/index.html
@@ -233,6 +233,6 @@
 
         feather.replace();
     </script>
-    <script src="test.js"></script>
+    <script src="js/test.js"></script>
 </body>
 </html>
