--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body class="bg-white font-sans">
-    <canvas id="splash"></canvas>
+    <canvas id="splash" width="800" height="600"></canvas>
     <div id="vanta-bg" class="fixed inset-0 -z-10 opacity-10"></div>
     
     <nav class="bg-white shadow-sm sticky top-0 z-50">
