--- a/testindex.html
+++ b/testindex.html
@@ -20,6 +20,6 @@
 <body>
   <canvas id="splash"></canvas>
 
-  <script src="js/splash.js"></script>
+  <script src="js/test.js"></script>
 </body>
 </html>
