--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div data-aos="fade-left" class="flex justify-center">
                 <div class="relative w-64 h-64 md:w-80 md:h-80">
                     <div class="absolute inset-0 rounded-full bg-gradient-to-r from-blue-500 to-purple-600 blur-xl opacity-20"></div>
-                    <img src="https://github.com/HarshalMore/portfolio-hm-ds-white-2/blob/6470ec7f80fcd2fac48b56b4a68a3a54a9ca2edf/cropped.png" alt="Harshal More" class="relative rounded-full w-full h-full object-cover border-4 border-white shadow-xl">
+                    <img src="images/IMG_3590.jpg" alt="Harshal More" class="relative rounded-full w-full h-full object-cover border-4 border-white shadow-xl">
                 </div>
             </div>
         </section>
